2007-07-08  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/ui/timeline.py:
	Use a gtk.Label with an eventbox instead of the previous method in order
	to display the informational message in the timeline.
	Fixes #405462

2007-06-30  Edward Hervey  <bilboed@bilboed.com>

	* MAINTAINERS:
	* pitivi.spec.in:
	* pitivi/ui/mainwindow.py:
	* pitivi/ui/plumber.py:
	Changing email adress for my copyrights, since I'm no longer at Fluendo.

2007-06-18  Edward Hervey  <edward@fluendo.com>

	* pitivi/elements/smartscale.py:
	Revert previous commit since it breaks a lot of behaviours :( If there's
	no pixel-aspect-ratio in the caps, that means it's 1/1.

2007-06-17  Edward Hervey  <edward@fluendo.com>

	* pitivi/playground.py:
	(getCurrentTimePosition): added a 'onlyvideo' default parameter because
	of issues with audio streams (namely mad/mp3).
	* pitivi/ui/ruler.py:
	* pitivi/ui/viewer.py:
	Specify format when doing a seek. Good if we add other parameters to
	Playground.seekInCurrent() later on.

2007-06-15  Edward Hervey  <edward@fluendo.com>

	* pitivi/elements/Makefile.am: (elements_PYTHON): 
	Add the new thumbnailsink.

2007-06-14  Edward Hervey  <edward@fluendo.com>

	* pitivi/elements/thumbnailsink.py:
	First take at a thumbnailing sink that converts RGB buffers into
	GdkPixbuf usable in gtk widgets.

2007-05-30  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/timelineobjects.py:
	re-activate "remove" popup button on sources now that the release is 
	done.

2007-05-30  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	Back to development cycle.

=== release 0.10.3 ===

2007-05-30  Edward Hervey  <edward@fluendo.com>

	* NEWS:
	* RELEASE:
	* configure.ac:
	Releasing 0.10.3 "Got some new t-shirts"

2007-05-30  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/timelineobjects.py: (SimpleSourceWidget.__init__):
	Disable source editing for the release.
	* po/ar.po:
	* po/ca.po:
	* po/de.po:
	* po/dz.po:
	* po/el.po:
	* po/en_GB.po:
	* po/es.po:
	* po/fi.po: