@@ -1,5 +1,12 @@
 2007-07-08  Edward Hervey  <bilboed@bilboed.com>
 
+	* pitivi/settings.py:
+	More flexible algorithm for finding compatible muxers and encoders.
+	It still leaves the problem of limitations because of the
+	encoders (in size, depth, ...).
+
+2007-07-08  Edward Hervey  <bilboed@bilboed.com>
+
 	* pitivi/ui/timeline.py:
 	Use a gtk.Label with an eventbox instead of the previous method in order
 	to display the informational message in the timeline.
